tests/src/frontend/typechecking/invalid/missing_function_3.sk
fun main(): void {
  _ = String::noSuchMethod();
  print_raw("wut")
}
